# LLM_Stu_Record

./: .env.example  .gitignore  README.md  pyproject.toml
Agent/: README.md
LangChain/: README.md
RAG/: README.md
RAG/projects/RAG-Techniques/: .env.example  .gitignore  README.md  UPSTREAM_VERSION  pyproject.toml
RAG/projects/RAG-Techniques/config/: models.toml
RAG/projects/RAG-Techniques/learning-path/01-foundations/: README.md  choose_chunk_size.ipynb  choose_chunk_size.zh-CN.md  proposition_chunking.ipynb  proposition_chunking.zh-CN.md  reliable_rag.ipynb  reliable_rag.zh-CN.md  simple_csv_rag.ipynb  simple_csv_rag.zh-CN.md  simple_csv_rag_with_llamaindex.ipynb  simple_csv_rag_with_llamaindex.zh-CN.md  simple_rag.ipynb  simple_rag.zh-CN.md  simple_rag_with_llamaindex.ipynb  simple_rag_with_llamaindex.zh-CN.md
RAG/projects/RAG-Techniques/learning-path/01-foundations/scripts/: choose_chunk_size.py  simple_rag.py
RAG/projects/RAG-Techniques/learning-path/02-query-enhancement/: HyDe_Hypothetical_Document_Embedding.ipynb  HyDe_Hypothetical_Document_Embedding.zh-CN.md  HyPE_Hypothetical_Prompt_Embeddings.ipynb  HyPE_Hypothetical_Prompt_Embeddings.zh-CN.md  README.md  query_transformations.ipynb  query_transformations.zh-CN.md
RAG/projects/RAG-Techniques/learning-path/02-query-enhancement/scripts/: HyDe_Hypothetical_Document_Embedding.py  HyPE_Hypothetical_Prompt_Embeddings.py  query_transformations.py
RAG/projects/RAG-Techniques/learning-path/03-context-engineering/: README.md  context_enrichment_window_around_chunk.ipynb  context_enrichment_window_around_chunk.zh-CN.md  context_enrichment_window_around_chunk_with_llamaindex.ipynb  context_enrichment_window_around_chunk_with_llamaindex.zh-CN.md  contextual_chunk_headers.ipynb  contextual_chunk_headers.zh-CN.md  contextual_compression.ipynb  contextual_compression.zh-CN.md  document_augmentation.ipynb  document_augmentation.zh-CN.md  relevant_segment_extraction.ipynb  relevant_segment_extraction.zh-CN.md  semantic_chunking.ipynb  semantic_chunking.zh-CN.md
RAG/projects/RAG-Techniques/learning-path/03-context-engineering/scripts/: context_enrichment_window_around_chunk.py  contextual_compression.py  document_augmentation.py  semantic_chunking.py
RAG/projects/RAG-Techniques/learning-path/04-retrieval-ranking/: README.md  dartboard.ipynb  dartboard.zh-CN.md  explainable_retrieval.ipynb  explainable_retrieval.zh-CN.md  fusion_retrieval.ipynb  fusion_retrieval.zh-CN.md  fusion_retrieval_with_llamaindex.ipynb  fusion_retrieval_with_llamaindex.zh-CN.md  hierarchical_indices.ipynb  hierarchical_indices.zh-CN.md  memorag.ipynb  memorag.zh-CN.md  reranking.ipynb  reranking.zh-CN.md  reranking_with_llamaindex.ipynb  reranking_with_llamaindex.zh-CN.md
RAG/projects/RAG-Techniques/learning-path/04-retrieval-ranking/scripts/: explainable_retrieval.py  fusion_retrieval.py  hierarchical_indices.py  reranking.py
RAG/projects/RAG-Techniques/learning-path/05-adaptive-agentic/: Agentic_RAG.ipynb  Agentic_RAG.zh-CN.md  README.md  adaptive_retrieval.ipynb  adaptive_retrieval.zh-CN.md  crag.ipynb  crag.zh-CN.md  retrieval_with_feedback_loop.ipynb  retrieval_with_feedback_loop.zh-CN.md  self_rag.ipynb  self_rag.zh-CN.md
RAG/projects/RAG-Techniques/learning-path/06-graph-hierarchical/: Microsoft_GraphRag.ipynb  Microsoft_GraphRag.zh-CN.md  README.md  graph_rag.ipynb  graph_rag.zh-CN.md  graphrag_with_milvus_vectordb.ipynb  graphrag_with_milvus_vectordb.zh-CN.md  raptor.ipynb  raptor.zh-CN.md
RAG/projects/RAG-Techniques/learning-path/07-multimodal-structured/: README.md  json_rag.ipynb  json_rag.zh-CN.md  multi_model_rag_with_captioning.ipynb  multi_model_rag_with_captioning.zh-CN.md  multi_model_rag_with_colpali.ipynb  multi_model_rag_with_colpali.zh-CN.md
RAG/projects/RAG-Techniques/learning-path/08-evaluation/: README.md  define_evaluation_metrics.ipynb  define_evaluation_metrics.zh-CN.md  end-2-end_rag_evaluation.ipynb  end-2-end_rag_evaluation.zh-CN.md  evaluation_deep_eval.ipynb  evaluation_deep_eval.zh-CN.md  evaluation_grouse.ipynb  evaluation_grouse.zh-CN.md  open-rag-eval-example.ipynb  open-rag-eval-example.zh-CN.md
RAG/projects/RAG-Techniques/src/rag_techniques_zh/: __init__.py  config.py  evaluation.py  factories.py  notebook.py  upstream_helpers.py
RAG/projects/RAG-Techniques/tests/: test_config.py
RAG/projects/RAG-Techniques/tools/: build_learning_project.py
(+100 files in other folders)
