[project]
name = "llm-stu-record"
version = "0.1.0"
description = "LLM learning workspace with a uv-managed LangChain and LangGraph development environment."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-azure-ai>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.12",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.9.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
