[project]
name = "llm-stu-record"
version = "0.1.0"
description = "LLM learning workspace with one uv-managed Python environment at the repository root."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-azure-ai>=1.0.4",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.12",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "langgraph-sdk>=0.2.9",
    "langsmith>=0.9.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "tiktoken>=0.13.0",
    "trustcall>=0.0.39",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "nbformat>=5.10",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
langgraph-app = [
    "dashscope>=1.25.24",
    "fastmcp>=3.4.2",
    "gradio>=6.19.0",
    "typer>=0.24.1,<0.25",
]
rag = [
    "rag-techniques-zh[llamaindex,nlp,notebook,providers]",
]
rag-evaluation = [
    "rag-techniques-zh[evaluation]",
]
rag-advanced = [
    "rag-techniques-zh[advanced,graph]",
]
rag-multimodal = [
    "rag-techniques-zh[multimodal]",
]
agent = [
    "memu-py[document,langgraph]",
]
all-learning = [
    { include-group = "agent" },
    { include-group = "langgraph-app" },
    { include-group = "rag" },
    { include-group = "rag-advanced" },
    { include-group = "rag-evaluation" },
]

[tool.uv.workspace]
members = [
    "Agent/projects/memU",
    "RAG/projects/RAG-Techniques",
]

[tool.uv]
package = false

[tool.uv.sources]
memu-py = { workspace = true }
rag-techniques-zh = { workspace = true }

[tool.pytest.ini_options]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"
