[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-techniques-zh"
version = "0.1.0"
description = "按学习路径重编排并中文化的 RAG Techniques 实验项目"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "python-dotenv>=1.0",
  "openai>=1.50",
  "langchain>=0.3",
  "langchain-community>=0.3",
  "langchain-openai>=0.2",
  "langchain-text-splitters>=0.3",
  "faiss-cpu>=1.8",
  "pymupdf>=1.24",
  "pypdf>=5.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
notebook = ["jupyterlab>=4.2", "ipykernel>=6.29", "nbformat>=5.10"]
evaluation = ["deepeval>=2.0", "ragas>=0.2"]
graph = ["networkx>=3.3", "pymilvus>=2.5"]
nlp = ["nltk>=3.9", "spacy>=3.8", "sentence-transformers>=3.0", "scikit-learn>=1.5"]
llamaindex = ["llama-index>=0.12", "llama-index-llms-openai>=0.3"]
providers = [
  "cohere>=5.0",
  "langchain-cohere>=0.3",
  "langchain-groq>=0.2",
  "langchain-ollama>=0.2",
  "google-generativeai>=0.8",
]
advanced = [
  "beautifulsoup4>=4.12",
  "contextual-client>=0.1",
  "graphrag>=2.0",
  "matplotlib>=3.9",
  "pyyaml>=6.0",
  "requests>=2.32",
  "scipy>=1.14",
  "tiktoken>=0.8",
  "tqdm>=4.66",
]
multimodal = [
  "pillow>=10.4",
  "torch>=2.4",
  "transformers>=4.45",
]
dev = ["pytest>=8.3", "ruff>=0.8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
